test/modules/standard/FileSystem/lydia/copyTree/no_src.good
no_src.chpl:3: error: uncaught error - Not a directory in copyTree(shesNotThere, pleaseDontBotherTryingToFindHer)
